Create FAQ Page Information

--- a/product.html
+++ b/product.html
@@ -7,8 +7,8 @@
     <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
-    <header>
-      <nav>
+    <header role="banner">
+      <nav role="navigation">
         <ul>
           <li>logo</li>
           <li><a href="./home.html">Home</a></li>
@@ -23,7 +23,7 @@
       </section>
     </header>
 
-    <main>
+    <main role="main">
       <section class="products">
         <h2>Products</h2>
         <article class="face-cream">
@@ -90,11 +90,10 @@
           <img src="" alt="image of tote bag">
           <h3>Tote Bag</h3>
         </article>
-
       </section>
     </main>
 
-    <footer>
+    <footer role="contentinfo">
       <small>Images and Inspiration from yellowbeauty.com</small>
     </footer>
   </body>
