--- a/faq.html
+++ b/faq.html
@@ -24,28 +24,47 @@
     </header>
 
     <main role="main">
-      <section class="about">
-        <h2>About</h2>
-        <p>Sunshine is a small company which produces products for a fresh face. Founded in 2017 in hopes of helping those improve their skin care routine and achieve their skin goals they never thought possible. Sunshine is here for you, we are here to help you achieve your skin goals and boost your self confidence and serotonin. Find the benefits you need here from ingredients you’ll love.</p>
-        <img src="" alt="">
-      </section>
+      <section class="faq">
+        <h2>Frequently Asked Questions</h2>
 
-      <section class="new-products">
-        <h2>New Products</h2>
-        <p>Our newest product is our Hydrasun face cream.  It is another step added in our skin care routine as it is to be used after our elixir to lock in moisture for the day and give a beautiful, clean and soft feel to your skin.  It includes some amazing and very beneficial ingredients such as honey, turmeric, sea buckthorn, reishi mushroom and golden root.
-        These ingredients are so beneficial for your skin because it includes anti aging properties and collagen boost. Furthermore it helps regulate many skin conditions for example with acne breakouts, eczema and many more, at the same time lessening the appearance of dark spots and acne scars. So what are you waiting for?</p>
-        <img src="" alt="">
-        <img src="" alt="">
-      </section>
+        <ul>
+          <div class="question1">
+            <li><span>Q</span>Can this be used for sensitive skin?</li>
+            <li><span>A</span>Yes all of our products are made for sensitive skin.</li>
+          </div>
+          <div class="question2">
+            <li><span>Q</span>Are the products vegan?</li>
+            <li><span>A</span>Yes all of our products are vegan.</li>
+          </div>
+          <div class="question 3">
+            <li><span>Q</span>Are there any ingredients I should worry about that might cause an allergic reaction?</li>
+            <li><span>A</span>No there are no ingredients to worry about that would cause an allergic reaction.</li>
+          </div>
+          <div class="question 4">
+            <li><span>Q</span>Where are these products produced?</li>
+            <li><span>A</span>All products are manufactured, packaged and distributed from Ottawa, Ontario</li>
+          </div>
+          <div class="question5">
+            <li><span>Q</span>Will the turmeric stain my skin?</li>
+            <li><span>A</span>No, the turmeric will not stain your skin, the red erase mask sometimes leaves a bit of resedue but it will come off.</li>
+          </div>
+          <div class="question6">
+            <li><span>Q</span>Will it stain my clothes?</li>
+            <li><span>A</span>It is possible for some of our products to stain clothes, make sure to use a cover when using the mask, scrub and elixir.</li>
+          </div>
+        </ul>
 
-      <section class="key-ingredient">
-        <h2>Key Ingredient - Honey</h2>
-        <p>A key ingredient in many of our products is raw honey. Raw honey is beneficial because it regulates the balance of bacteria on your skin,
-          therefore it is a great element for controlling acne. It’s anti acne property is very important benefit for so many people struggling with acne and self esteem issues because of it. Furthermore it helps to heal
-          your skin from any damages as it has a property which speeds up the skin cells healing process.</p>
-        <img src="" alt="">
-        <img src="" alt="">
-      </section>
+        <h2>Owners/Creators</h2>
+        <p>These two fell in love with the happy feelings and benefits they found in good skincare. When they discovered the benefits of honey,
+        they were hooked and wanted to share this amazing ingredient and many others with the world. These two got together in 2007 and started this
+        small skincare company in 2017 with the goal of making others feel good about their skin.</p>
+        Subscribe
+        Reviews
+
+        <h2>Contact Us</h2>
+        <p>James.norton@hotmail.com</p>
+        <p>613-927-4830</p>
+        Logo
     </main>
 
     <footer role="contentinfo">
