--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header role="banner">
-      <nav>
+      <nav role="navigation">
         <ul>
           <li><a href=".home.html"><img src="" alt="sunshine logo"></li>
           <li><a href="./home.html">Home</a></li>
