Inserting Images On Home Page

--- a/faq.html
+++ b/faq.html
@@ -58,13 +58,15 @@
         <p>These two fell in love with the happy feelings and benefits they found in good skincare. When they discovered the benefits of honey,
         they were hooked and wanted to share this amazing ingredient and many others with the world. These two got together in 2007 and started this
         small skincare company in 2017 with the goal of making others feel good about their skin.</p>
-        Subscribe
-        Reviews
+        <span>Subscribe</span>
+        <span>Reviews</span>
 
         <h2>Contact Us</h2>
         <p>James.norton@hotmail.com</p>
         <p>613-927-4830</p>
         Logo
+        social badges
+        <img src="" alt="">
     </main>
 
     <footer role="contentinfo">
