--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <header role="banner">
       <nav role="navigation">
         <ul>
-          <li><a href=".home.html"><img src="" alt="sunshine logo"></li>
+          <li><a href=".home.html"><img src="images/sunshine-logo.svg" alt="sunshine logo"></li>
           <li><a href="./home.html">Home</a></li>
           <li><a href="./product.html">Products</a></li>
           <li><a href="./faq.html">FAQ</a></li>
@@ -19,7 +19,7 @@
       <section class="banner">
         <h1>Sunshine</h1>
         <h2>Images and Inspiration from yellow.beauty.com</h2>
-        <img src="" alt="banner image">
+        <img src="images/banner-yellow.jpg" alt="banner image">
       </section>
     </header>
 
@@ -27,24 +27,24 @@
       <section class="about">
         <h2>About</h2>
         <p>Sunshine is a small company which produces products for a fresh face. Founded in 2017 in hopes of helping those improve their skin care routine and achieve their skin goals they never thought possible. Sunshine is here for you, we are here to help you achieve your skin goals and boost your self confidence and serotonin. Find the benefits you need here from ingredients you’ll love.</p>
-        <img src="" alt="">
+        <img src="images/about-set.jpg" alt="">
       </section>
 
       <section class="new-products">
         <h2>New Products</h2>
+        <img src="images/face-cream.jpg" alt="">
         <p>Our newest product is our Hydrasun face cream.  It is another step added in our skin care routine as it is to be used after our elixir to lock in moisture for the day and give a beautiful, clean and soft feel to your skin.  It includes some amazing and very beneficial ingredients such as honey, turmeric, sea buckthorn, reishi mushroom and golden root.
         These ingredients are so beneficial for your skin because it includes anti aging properties and collagen boost. Furthermore it helps regulate many skin conditions for example with acne breakouts, eczema and many more, at the same time lessening the appearance of dark spots and acne scars. So what are you waiting for?</p>
-        <img src="" alt="">
-        <img src="" alt="">
+
       </section>
 
       <section class="key-ingredient">
         <h2>Key Ingredient - Honey</h2>
+        <img src="images/bath-honey.jpg" alt="image of bath and face scrub">
+        <img src="images/honey-spoon.jpg" alt="image of honeycomb">
         <p>A key ingredient in many of our products is raw honey. Raw honey is beneficial because it regulates the balance of bacteria on your skin,
           therefore it is a great element for controlling acne. It’s anti acne property is very important benefit for so many people struggling with acne and self esteem issues because of it. Furthermore it helps to heal
           your skin from any damages as it has a property which speeds up the skin cells healing process.</p>
-        <img src="" alt="">
-        <img src="" alt="">
       </section>
     </main>
 
