--- a/product.html
+++ b/product.html
@@ -19,7 +19,7 @@
       <section class="banner">
         <h1>Ocean Drops</h1>
         <h2>Images and Inspiration from yellow.beauty.com</h2>
-        <img src="" alt="banner image">
+        <img src="images/ocean-drops.jpg" alt="banner image">
       </section>
     </header>
 
