Inserting Photos for Product Page

--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <header role="banner">
       <nav role="navigation">
         <ul>
-          <li><a href=".home.html"><img src="images/sunshine-logo.svg" alt="sunshine logo"></li>
+          <li><a href="./home.html"><img src="images/sunshine-logo.svg" alt="sunshine logo"></li>
           <li><a href="./home.html">Home</a></li>
           <li><a href="./product.html">Products</a></li>
           <li><a href="./faq.html">FAQ</a></li>
