Add Icon Images

--- a/faq.html
+++ b/faq.html
@@ -18,14 +18,16 @@
       </nav>
       <section class="banner">
         <h1>Honey</h1>
+        <img src="images/face-mask-banner.jpg" alt="banner image">
+        <img src="images/sunshine-logo.svg" alt="banner image logo">
         <h2>Images and Inspiration from yellow.beauty.com</h2>
-        <img src="" alt="banner image">
       </section>
     </header>
 
     <main role="main">
       <section class="faq">
         <h2>Frequently Asked Questions</h2>
+        <img src="images/question-mark.svg" alt="">
 
         <ul>
           <div class="question1">
@@ -54,19 +56,32 @@
           </div>
         </ul>
 
-        <h2>Owners/Creators</h2>
-        <p>These two fell in love with the happy feelings and benefits they found in good skincare. When they discovered the benefits of honey,
-        they were hooked and wanted to share this amazing ingredient and many others with the world. These two got together in 2007 and started this
-        small skincare company in 2017 with the goal of making others feel good about their skin.</p>
-        <span>Subscribe</span>
-        <span>Reviews</span>
+        <section class="owners">
+          <h2>Owners/Creators</h2>
+          <img src="images/owners.jpg" alt="Image of Owners">
+          <p>These two fell in love with the happy feelings and benefits they found in good skincare. When they discovered the benefits of honey,
+          they were hooked and wanted to share this amazing ingredient and many others with the world. These two got together in 2007 and started this
+          small skincare company in 2017 with the goal of making others feel good about their skin.</p>
+          <div class="subcribe-button">
+            <h3>Subscribe</h3>
+          </div>
+          <div class="reviews-button">
+            <h3>Reviews</h3>
+          </div>
+        </section>
 
-        <h2>Contact Us</h2>
-        <p>James.norton@hotmail.com</p>
-        <p>613-927-4830</p>
-        Logo
-        social badges
-        <img src="" alt="">
+
+        <section class="contact-us">
+          <h2>Contact Us</h2>
+          <img src="images/at.svg" alt="">
+          <p>James.norton@hotmail.com</p>
+          <p>613-927-4830</p>
+          <img src="images/sunshine-logo.svg" alt="sunshine logo">
+          <img src="images/facebook.svg" alt="facebook logo">
+          <img src="images/instagram.svg" alt="instagram logo">
+          <img src="images/tiktok.svg" alt="tiktok logo">
+          <img src="images/twitter.svg" alt="twitter logo">
+        </section>
     </main>
 
     <footer role="contentinfo">
