--- a/product.html
+++ b/product.html
@@ -18,8 +18,9 @@
       </nav>
       <section class="banner">
         <h1>Ocean Drops</h1>
+        <img src="images/banner-yellow.jpg" alt="banner image">
+        <img src="images/sunshine-logo.svg" alt="banner image logo">
         <h2>Images and Inspiration from yellow.beauty.com</h2>
-        <img src="images/ocean-drops.jpg" alt="banner image">
       </section>
     </header>
 
