--- a/product.html
+++ b/product.html
@@ -4,13 +4,15 @@
     <meta charset="utf-8">
     <title>Independant Project</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="https://use.typekit.net/pnd6spq.css">
+    <link rel="stylesheet" href="https://use.typekit.net/pnd6spq.css">
     <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
     <header role="banner">
       <nav role="navigation">
         <ul>
-          <li><a href="./home.html"><img src="images/sunshine-logo.svg" alt="sunshine logo"></li>
+          <li class="logo"><a href="./home.html"><img src="images/sunshine-logo.svg" alt="sunshine logo"></li>
           <li><a href="./home.html">Home</a></li>
           <li><a href="./product.html">Products</a></li>
           <li><a href="./faq.html">FAQ</a></li>
@@ -18,7 +20,7 @@
       </nav>
       <section class="banner">
         <h1>Ocean Drops</h1>
-        <img src="images/banner-yellow.jpg" alt="banner image">
+        <img src="images/ocean-drops.jpg" alt="banner image">
         <img src="images/sunshine-logo.svg" alt="banner image logo">
         <h2>Images and Inspiration from yellow.beauty.com</h2>
       </section>
