Add CSS and Alter Logo

--- a/home.html
+++ b/home.html
@@ -10,9 +10,9 @@
   </head>
   <body>
     <header role="banner">
+      <a href class="logo"="./home.html"><img src="images/sunshine-logo.svg" alt="sunshine logo"></a>
       <nav role="navigation">
         <ul>
-          <li class="logo"><a href="./home.html"><img src="images/sunshine-logo.svg" alt="sunshine logo"></li>
           <li><a href="./home.html">Home</a></li>
           <li><a href="./product.html">Products</a></li>
           <li><a href="./faq.html">FAQ</a></li>
@@ -20,7 +20,7 @@
       </nav>
       <section class="banner">
         <h1>Sunshine</h1>
-        <img src="images/banner-yellow.jpg" alt="banner image">
+        <img class="large-banner "src="images/banner-yellow.jpg" alt="banner image">
         <img src="images/sunshine-logo.svg" alt="banner image logo">
         <h2>Images and Inspiration from yellow.beauty.com</h2>
       </section>
