Change Index Name

--- a/product.html
+++ b/product.html
@@ -18,11 +18,14 @@
           <li><a href="./faq.html">FAQ</a></li>
         </ul>
       </nav>
-      <section class="banner">
-        <h1>Ocean Drops</h1>
-        <img src="images/ocean-drops.jpg" alt="banner image">
-        <img src="images/sunshine-logo.svg" alt="banner image logo">
-        <h2>Images and Inspiration from yellow.beauty.com</h2>
+      <section class="banner-ocean">
+        <div class="left-ocean">
+          <img src="images/ocean-drops.jpg" alt="banner image">
+        </div>
+        <div class="right-ocean">
+          <h1>Ocean Drops</h1>
+          <h2>Images and Inspiration from yellow.beauty.com</h2>
+        </div>
       </section>
     </header>
 
