Fix the layout of FAQ

--- a/faq.html
+++ b/faq.html
@@ -31,31 +31,31 @@
         <h2>Frequently Asked Questions</h2>
         <img src="images/question-mark.svg" alt="">
 
-        <ul>
-          <div class="question1">
+        <div>
+          <ul class="question1">
             <li><span>Q</span>Can this be used for sensitive skin?</li>
             <li><span>A</span>Yes all of our products are made for sensitive skin.</li>
-          </div>
-          <div class="question2">
+          </ul>
+          <ul class="question2">
             <li><span>Q</span>Are the products vegan?</li>
             <li><span>A</span>Yes all of our products are vegan.</li>
-          </div>
-          <div class="question 3">
+          </ul>
+          <ul class="question 3">
             <li><span>Q</span>Are there any ingredients I should worry about that might cause an allergic reaction?</li>
             <li><span>A</span>No there are no ingredients to worry about that would cause an allergic reaction.</li>
-          </div>
-          <div class="question 4">
+          </ul>
+          <ul class="question 4">
             <li><span>Q</span>Where are these products produced?</li>
             <li><span>A</span>All products are manufactured, packaged and distributed from Ottawa, Ontario</li>
-          </div>
-          <div class="question5">
+          </ul>
+          <ul class="question5">
             <li><span>Q</span>Will the turmeric stain my skin?</li>
             <li><span>A</span>No, the turmeric will not stain your skin, the red erase mask sometimes leaves a bit of resedue but it will come off.</li>
-          </div>
-          <div class="question6">
+          </ul>
+          <ul class="question6">
             <li><span>Q</span>Will it stain my clothes?</li>
             <li><span>A</span>It is possible for some of our products to stain clothes, make sure to use a cover when using the mask, scrub and elixir.</li>
-          </div>
+          </ul>
         </ul>
 
         <section class="owners">
