--- a/faq.html
+++ b/faq.html
@@ -10,28 +10,33 @@
   </head>
   <body>
     <header role="banner">
-      <a href class="logo"="./home.html"><img src="images/sunshine-logo.svg" alt="sunshine logo"></a>
-      <nav role="navigation">
-        <ul>
-          <li><a href="./home.html">Home</a></li>
-          <li><a href="./product.html">Products</a></li>
-          <li><a href="./faq.html">FAQ</a></li>
-        </ul>
-      </nav>
-      <section class="banner">
-        <h1>Honey</h1>
-        <img src="images/face-mask-banner.jpg" alt="banner image">
-        <img src="images/sunshine-logo.svg" alt="banner image logo">
-        <h2>Images and Inspiration from yellow.beauty.com</h2>
+      <section class="nav">
+        <a href class="logo"="./index.html"><img src="images/sunshine-logo.svg" alt="sunshine logo"></a>
+        <nav role="navigation">
+          <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./product.html">Products</a></li>
+            <li><a href="./faq.html">FAQ</a></li>
+          </ul>
+        </nav>
+      </section>
+      <section class="split-banner">
+        <div class="right-honey">
+          <h1>Honey</h1>
+          <h2>Images and Inspiration from yellow.beauty.com</h2>
+        </div>
+        <div class="left-honey">
+          <img src="images/face-mask-banner.jpg" alt="banner image">
+        </div>
       </section>
     </header>
 
     <main role="main">
       <section class="faq">
-        <h2>Frequently Asked Questions</h2>
+        <h2 class="wrapper">Frequently Asked Questions</h2>
         <img src="images/question-mark.svg" alt="">
 
-        <div>
+        <div class="wrapper">
           <ul class="question1">
             <li><span>Q</span>Can this be used for sensitive skin?</li>
             <li><span>A</span>Yes all of our products are made for sensitive skin.</li>
@@ -57,32 +62,39 @@
             <li><span>A</span>It is possible for some of our products to stain clothes, make sure to use a cover when using the mask, scrub and elixir.</li>
           </ul>
         </ul>
+      </section>
 
         <section class="owners">
-          <h2>Owners/Creators</h2>
-          <img src="images/owners.jpg" alt="Image of Owners">
-          <p>These two fell in love with the happy feelings and benefits they found in good skincare. When they discovered the benefits of honey,
-          they were hooked and wanted to share this amazing ingredient and many others with the world. These two got together in 2007 and started this
-          small skincare company in 2017 with the goal of making others feel good about their skin.</p>
-          <div class="subcribe-button">
-            <h3>Subscribe</h3>
-          </div>
-          <div class="reviews-button">
-            <h3>Reviews</h3>
+          <div class="wrapper">
+            <h2>Owners/Creators</h2>
+            <img src="images/owners.jpg" alt="Image of Owners">
+            <p>These two fell in love with the happy feelings and benefits they found in good skincare. When they discovered the benefits of honey,
+            they were hooked and wanted to share this amazing ingredient and many others with the world. These two got together in 2007 and started this
+            small skincare company in 2017 with the goal of making others feel good about their skin.</p>
+            <div class="button">
+              <h3>Subscribe</h3>
+            </div>
+            <div class="button">
+              <h3>Reviews</h3>
+            </div>
           </div>
         </section>
 
 
         <section class="contact-us">
-          <h2>Contact Us</h2>
-          <img src="images/at.svg" alt="">
-          <p>James.norton@hotmail.com</p>
-          <p>613-927-4830</p>
-          <img src="images/sunshine-logo.svg" alt="sunshine logo">
-          <img src="images/facebook.svg" alt="facebook logo">
-          <img src="images/instagram.svg" alt="instagram logo">
-          <img src="images/tiktok.svg" alt="tiktok logo">
-          <img src="images/twitter.svg" alt="twitter logo">
+          <div class="wrapper">
+            <h2>Contact Us</h2>
+            <img src="images/at.svg" alt="images of couple">
+            <p>James.norton@hotmail.com</p>
+            <p>613-927-4830</p>
+            <div class="badges">
+              <img src="images/sunshine-logo.svg" alt="sunshine logo">
+              <img src="images/facebook.svg" alt="facebook logo">
+              <img src="images/instagram.svg" alt="instagram logo">
+              <img src="images/tiktok.svg" alt="tiktok logo">
+              <img src="images/twitter.svg" alt="twitter logo">
+            </div>
+          </div>
         </section>
     </main>
 
