--- a/product.html
+++ b/product.html
@@ -10,14 +10,16 @@
   </head>
   <body>
     <header role="banner">
-      <a href class="logo"="./home.html"><img src="images/sunshine-logo.svg" alt="sunshine logo"></a>
-      <nav role="navigation">
-        <ul>
-          <li><a href="./home.html">Home</a></li>
-          <li><a href="./product.html">Products</a></li>
-          <li><a href="./faq.html">FAQ</a></li>
-        </ul>
-      </nav>
+      <section class="nav">
+        <a href class="logo"="./index.html"><img src="images/sunshine-logo.svg" alt="sunshine logo"></a>
+        <nav role="navigation">
+          <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./product.html">Products</a></li>
+            <li><a href="./faq.html">FAQ</a></li>
+          </ul>
+        </nav>
+      </section>
       <section class="banner-ocean">
         <div class="left-ocean">
           <img src="images/ocean-drops.jpg" alt="banner image">
@@ -31,71 +33,75 @@
 
     <main role="main">
       <section class="products">
-        <h2>Products</h2>
-        <article class="face-cream">
-          <p>$24</p>
-          <img src="images/face-cream-vertical.jpg" alt="image of face cream">
-          <h3>Hydrasun Face Cream</h3>
-        </article>
-        <article class="toner">
-          <p>$31</p>
-          <img src="images/water-toner.jpg" alt="image of water toner">
-          <h3>Rise & Sun Water Toner</h3>
-        </article>
-        <article class="elixir">
-          <p>$45</p>
-          <img src="images/ocean-elixir.jpg" alt="image of ocean drops elixir">
-          <h3>Ocean Drops Facial Elixir</h3>
-        </article>
-        <article class="face-wash">
-          <p>$29</p>
-          <img src="images/face-wash.jpg" alt="image of rain face wash">
-          <h3>Yellow Rain Face Wash</h3>
-        </article>
-        <article class="scrub">
-          <p>$22</p>
-          <img src="images/scrub.jpg" alt="image of face scrub">
-          <h3>Soft Sand Facial Scrub</h3>
-        </article>
-        <article class="mask">
-          <p>$19</p>
-          <img src="images/face-mask.jpg" alt="image of face masks">
-          <h3>Smooth Rays Face Mask</h3>
-        </article>
+        <div class="wrapper">
+          <h2>Products</h2>
+          <article class="face-cream">
+            <p>$24</p>
+            <img src="images/face-cream-vertical.jpg" alt="image of face cream">
+            <h3>Hydrasun Face Cream</h3>
+          </article>
+          <article class="toner">
+            <p>$31</p>
+            <img src="images/water-toner.jpg" alt="image of water toner">
+            <h3>Rise & Sun Water Toner</h3>
+          </article>
+          <article class="elixir">
+            <p>$45</p>
+            <img src="images/ocean-elixir.jpg" alt="image of ocean drops elixir">
+            <h3>Ocean Drops Facial Elixir</h3>
+          </article>
+          <article class="face-wash">
+            <p>$29</p>
+            <img src="images/face-wash.jpg" alt="image of rain face wash">
+            <h3>Yellow Rain Face Wash</h3>
+          </article>
+          <article class="scrub">
+            <p>$22</p>
+            <img src="images/scrub.jpg" alt="image of face scrub">
+            <h3>Soft Sand Facial Scrub</h3>
+          </article>
+          <article class="mask">
+            <p>$19</p>
+            <img src="images/face-mask.jpg" alt="image of face masks">
+            <h3>Smooth Rays Face Mask</h3>
+          </article>
+        </div>
       </section>
 
       <section class="accesories">
-        <h2>Accessories</h2>
-        <article class="cloth">
-          <p>$13</p>
-          <img src="images/face-cloth.jpg" alt="image of face cloth">
-          <h3>Yellow Face Cloth</h3>
-        </article>
-        <article class="image of cotton pads">
-          <p>$10</p>
-          <img src="images/cotton-pads.jpg" alt="image of cotton pads">
-          <h3>Reusable Cotton Pads</h3>
-        </article>
-        <article class="key-chain">
-          <p>$6</p>
-          <img src="images/key-chain.jpg" alt="image of key chain">
-          <h3>Nature Key Chain</h3>
-        </article>
-        <article class="brush">
-          <p>$9</p>
-          <img src="images/face-brush.jpg" alt="image of face mask brush">
-          <h3>Face Mask Brush</h3>
-        </article>
-        <article class="socks">
-          <p>$10</p>
-          <img src="images/socks.jpg" alt="image of socks">
-          <h3>Groovy Socks</h3>
-        </article>
-        <article class="bag">
-          <p>$12</p>
-          <img src="bag.jpg" alt="image of tote bag">
-          <h3>Tote Bag</h3>
-        </article>
+        <div class="wrapper">
+          <h2>Accessories</h2>
+          <article class="cloth">
+            <p>$13</p>
+            <img src="images/face-cloth.jpg" alt="image of face cloth">
+            <h3>Yellow Face Cloth</h3>
+          </article>
+          <article class="image of cotton pads">
+            <p>$10</p>
+            <img src="images/cotton-pads.jpg" alt="image of cotton pads">
+            <h3>Reusable Cotton Pads</h3>
+          </article>
+          <article class="key-chain">
+            <p>$6</p>
+            <img src="images/key-chain.jpg" alt="image of key chain">
+            <h3>Nature Key Chain</h3>
+          </article>
+          <article class="brush">
+            <p>$9</p>
+            <img src="images/face-brush.jpg" alt="image of face mask brush">
+            <h3>Face Mask Brush</h3>
+          </article>
+          <article class="socks">
+            <p>$10</p>
+            <img src="images/socks.jpg" alt="image of socks">
+            <h3>Groovy Socks</h3>
+          </article>
+          <article class="bag">
+            <p>$12</p>
+            <img src="images/bag.jpg" alt="image of tote bag">
+            <h3>Tote Bag</h3>
+          </article>
+        </div>
       </section>
     </main>
 
