Edit Image Sizes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://use.typekit.net/pnd6spq.css">
     <link rel="stylesheet" href="https://use.typekit.net/pnd6spq.css">
     <link href="css/main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
+      rel="stylesheet">
   </head>
   <body>
     <header role="banner">
@@ -22,18 +24,20 @@
       </section>
       <section class="banner">
         <h1>Sunshine</h1>
-        <img src="images/banner-yellow.jpg" alt="">
+        <img class="banner-image" src="images/banner-yellow." alt="large banner image of face mask">
         <img src="images/sunshine-logo.svg" alt="banner image logo">
         <h2>Images and Inspiration from yellow.beauty.com</h2>
       </section>
     </header>
 
-    <main role="main">
+    <main role="main" class="about-page">
       <section class="about">
         <div class="wrapper">
           <h2>About</h2>
-          <p>Sunshine is a small company which produces products for a fresh face. Founded in 2017 in hopes of helping those improve their skin care routine and achieve their skin goals they never thought possible. Sunshine is here for you, we are here to help you achieve your skin goals and boost your self confidence and serotonin. Find the benefits you need here from ingredients you’ll love.</p>
-          <img src="images/about-set.jpg" alt="">
+          <div class="about-flex">
+            <p>Sunshine is a small company which produces products for a fresh face. Founded in 2017 in hopes of helping those improve their skin care routine and achieve their skin goals they never thought possible. Sunshine is here for you, we are here to help you achieve your skin goals and boost your self confidence and serotonin. Find the benefits you need here from ingredients you’ll love.</p>
+            <img src="images/about-set.jpg" alt="self care set image">
+          </div>
         </div>
       </section>
 
@@ -41,20 +45,27 @@
       <section class="new-products">
         <div class="wrapper">
           <h2>New Products</h2>
-          <img src="images/face-cream.jpg" alt="">
-          <p>Our newest product is our Hydrasun face cream.  It is another step added in our skin care routine as it is to be used after our elixir to lock in moisture for the day and give a beautiful, clean and soft feel to your skin.  It includes some amazing and very beneficial ingredients such as honey, turmeric, sea buckthorn, reishi mushroom and golden root.
-            These ingredients are so beneficial for your skin because it includes anti aging properties and collagen boost. Furthermore it helps regulate many skin conditions for example with acne breakouts, eczema and many more, at the same time lessening the appearance of dark spots and acne scars. So what are you waiting for?</p>
+          <div class="new-product-section">
+            <img src="images/face-cream.jpg" alt="">
+            <p>Our newest product is our Hydrasun face cream.  It is another step added in our skin care routine as it is to be used after our elixir to lock in moisture for the day and give a beautiful, clean and soft feel to your skin.  It includes some amazing and very beneficial ingredients such as honey, turmeric, sea buckthorn, reishi mushroom and golden root.
+              These ingredients are so beneficial for your skin because it includes anti aging properties and collagen boost. Furthermore it helps regulate many skin conditions for example with acne breakouts, eczema and many more, at the same time lessening the appearance of dark spots and acne scars. So what are you waiting for?</p>
+          </div>
         </div>
       </section>
 
       <section class="key-ingredient">
         <div class="wrapper">
           <h2>Key Ingredient - Honey</h2>
-          <img src="images/bath-honey.jpg" alt="image of bath and face scrub">
-          <img src="images/honey-spoon.jpg" alt="image of honeycomb">
-          <p>A key ingredient in many of our products is raw honey. Raw honey is beneficial because it regulates the balance of bacteria on your skin,
-            therefore it is a great element for controlling acne. It’s anti acne property is very important benefit for so many people struggling with acne and self esteem issues because of it. Furthermore it helps to heal
-            your skin from any damages as it has a property which speeds up the skin cells healing process.</p>
+          <div class="key-ingredients">
+            <p>A key ingredient in many of our products is raw honey. Raw honey is beneficial because it regulates the balance of bacteria on your skin,
+              therefore it is a great element for controlling acne. It’s anti acne property is very important benefit for so many people struggling with acne and self esteem issues because of it. Furthermore it helps to heal
+              your skin from any damages as it has a property which speeds up the skin cells healing process.</p>
+            <div class="ingredient-images">
+              <img src="images/bath-honey.jpg" alt="image of bath and face scrub">
+              <img src="images/honey-spoon.jpg" alt="image of honeycomb">
+            </div>
+          </div>
+
         </div>
       </section>
     </main>
