--- a/faq.html
+++ b/faq.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://use.typekit.net/pnd6spq.css">
     <link rel="stylesheet" href="https://use.typekit.net/pnd6spq.css">
     <link href="css/main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
+      rel="stylesheet">
   </head>
   <body>
     <header role="banner">
@@ -34,43 +36,46 @@
     <main role="main">
       <section class="faq">
         <h2 class="wrapper">Frequently Asked Questions</h2>
-        <img src="images/question-mark.svg" alt="">
-
+        <span class="material-icons-outlined alternate_email ">alternate_email</span>
         <div class="wrapper">
-          <ul class="question1">
-            <li><span>Q</span>Can this be used for sensitive skin?</li>
-            <li><span>A</span>Yes all of our products are made for sensitive skin.</li>
-          </ul>
-          <ul class="question2">
-            <li><span>Q</span>Are the products vegan?</li>
-            <li><span>A</span>Yes all of our products are vegan.</li>
-          </ul>
-          <ul class="question 3">
-            <li><span>Q</span>Are there any ingredients I should worry about that might cause an allergic reaction?</li>
-            <li><span>A</span>No there are no ingredients to worry about that would cause an allergic reaction.</li>
-          </ul>
-          <ul class="question 4">
-            <li><span>Q</span>Where are these products produced?</li>
-            <li><span>A</span>All products are manufactured, packaged and distributed from Ottawa, Ontario</li>
-          </ul>
-          <ul class="question5">
-            <li><span>Q</span>Will the turmeric stain my skin?</li>
-            <li><span>A</span>No, the turmeric will not stain your skin, the red erase mask sometimes leaves a bit of resedue but it will come off.</li>
-          </ul>
-          <ul class="question6">
-            <li><span>Q</span>Will it stain my clothes?</li>
-            <li><span>A</span>It is possible for some of our products to stain clothes, make sure to use a cover when using the mask, scrub and elixir.</li>
-          </ul>
-        </ul>
+          <div class="question-grid">
+            <ul class="question1">
+              <li><span>Q</span>Can this be used for sensitive skin?</li>
+              <li><span>A</span>Yes all of our products are made for sensitive skin.</li>
+            </ul>
+            <ul class="question2">
+              <li><span>Q</span>Are the products vegan?</li>
+              <li><span>A</span>Yes all of our products are vegan.</li>
+            </ul>
+            <ul class="question 3">
+              <li><span>Q</span>Are there any ingredients I should worry about that might cause an allergic reaction?</li>
+              <li><span>A</span>No there are no ingredients to worry about that would cause an allergic reaction.</li>
+            </ul>
+            <ul class="question 4">
+              <li><span>Q</span>Where are these products produced?</li>
+              <li><span>A</span>All products are manufactured, packaged and distributed from Ottawa, Ontario</li>
+            </ul>
+            <ul class="question5">
+              <li><span>Q</span>Will the turmeric stain my skin?</li>
+              <li><span>A</span>No, the turmeric will not stain your skin, the red erase mask sometimes leaves a bit of resedue but it will come off.</li>
+            </ul>
+            <ul class="question6">
+              <li><span>Q</span>Will it stain my clothes?</li>
+              <li><span>A</span>It is possible for some of our products to stain clothes, make sure to use a cover when using the mask, scrub and elixir.</li>
+            </ul>
+          </div>
+        </div>
       </section>
 
         <section class="owners">
           <div class="wrapper">
             <h2>Owners/Creators</h2>
-            <img src="images/owners.jpg" alt="Image of Owners">
-            <p>These two fell in love with the happy feelings and benefits they found in good skincare. When they discovered the benefits of honey,
-            they were hooked and wanted to share this amazing ingredient and many others with the world. These two got together in 2007 and started this
-            small skincare company in 2017 with the goal of making others feel good about their skin.</p>
+            <div class="owners-grid">
+              <img class="couple" src="images/owners.jpg" alt="Image of Owners">
+              <p>These two fell in love with the happy feelings and benefits they found in good skincare. When they discovered the benefits of honey,
+              they were hooked and wanted to share this amazing ingredient and many others with the world. These two got together in 2007 and started this
+              small skincare company in 2017 with the goal of making others feel good about their skin.</p>
+            </div>
             <div class="button">
               <h3>Subscribe</h3>
             </div>
@@ -87,8 +92,8 @@
             <img src="images/at.svg" alt="images of couple">
             <p>James.norton@hotmail.com</p>
             <p>613-927-4830</p>
+            <img src="images/sunshine-logo.svg" alt="sunshine logo">
             <div class="badges">
-              <img src="images/sunshine-logo.svg" alt="sunshine logo">
               <img src="images/facebook.svg" alt="facebook logo">
               <img src="images/instagram.svg" alt="instagram logo">
               <img src="images/tiktok.svg" alt="tiktok logo">
