Try To Fix The Banner Images

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </section>
       <section class="banner">
         <h1>Sunshine</h1>
-        <img class="banner-image" src="images/banner-yellow." alt="large banner image of face mask">
+        <img class="banner-image" src="images/banner-yellow.jpg" alt="large banner image of face mask">
         <img src="images/sunshine-logo.svg" alt="banner image logo">
         <h2>Images and Inspiration from yellow.beauty.com</h2>
       </section>
