Fix Icons and Image Sizes

--- a/faq.html
+++ b/faq.html
@@ -16,9 +16,9 @@
         <a href class="logo"="./index.html"><img src="images/sunshine-logo.svg" alt="sunshine logo"></a>
         <nav role="navigation">
           <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./product.html">Products</a></li>
-            <li><a href="./faq.html">FAQ</a></li>
+            <li><a href="./index.html"aria-label="To Home Page">Home</a></li>
+            <li><a href="./product.html"aria-label="To Product Page">Products</a></li>
+            <li><a href="./faq.html"aria-label="To Frequently Asked Questions Page">FAQ</a></li>
           </ul>
         </nav>
       </section>
@@ -36,7 +36,7 @@
     <main role="main">
       <section class="faq">
         <h2 class="wrapper">Frequently Asked Questions</h2>
-        <span class="material-icons-outlined alternate_email ">alternate_email</span>
+        <span class="material-icons-outlined help"></span>
         <div class="wrapper">
           <div class="question-grid">
             <ul class="question1">
@@ -88,11 +88,15 @@
 
         <section class="contact-us">
           <div class="wrapper">
-            <h2>Contact Us</h2>
-            <img src="images/at.svg" alt="images of couple">
-            <p>James.norton@hotmail.com</p>
-            <p>613-927-4830</p>
-            <img src="images/sunshine-logo.svg" alt="sunshine logo">
+            <div class="contact-details">
+              <div class="contact-info">
+                <h2>Contact Us</h2>
+                <span class="material-icons-outlined alternate_email "></span>
+                <p>James.norton@hotmail.com</p>
+                <p>613-927-4830</p>
+              </div>
+              <img class="logo-small" src="images/sunshine-logo.svg" alt="sunshine logo">
+            </div>
             <div class="badges">
               <img src="images/facebook.svg" alt="facebook logo">
               <img src="images/instagram.svg" alt="instagram logo">
