--- a/product.html
+++ b/product.html
@@ -16,9 +16,9 @@
         <a href class="logo"="./index.html"><img src="images/sunshine-logo.svg" alt="sunshine logo"></a>
         <nav role="navigation">
           <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./product.html">Products</a></li>
-            <li><a href="./faq.html">FAQ</a></li>
+            <li><a href="./index.html"aria-label="To Home Page">Home</a></li>
+            <li><a href="./product.html"aria-label="To Product Page">Products</a></li>
+            <li><a href="./faq.html"aria-label="To Frequently Asked Questions Page">FAQ</a></li>
           </ul>
         </nav>
       </section>
