--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <a href class="logo"="./index.html"><img src="images/sunshine-logo.svg" alt="sunshine logo"></a>
         <nav role="navigation">
           <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./product.html">Products</a></li>
-            <li><a href="./faq.html">FAQ</a></li>
+            <li><a href="./index.html"aria-label="To Home Page">Home</a></li>
+            <li><a href="./product.html"aria-label="To Product Page">Products</a></li>
+            <li><a href="./faq.html"aria-label="To Frequently Asked Questions Page">FAQ</a></li>
           </ul>
         </nav>
       </section>
       <section class="banner">
         <h1>Sunshine</h1>
-        <img class="banner-image" src="images/banner-yellow.jpg" alt="large banner image of face mask">
-        <img src="images/sunshine-logo.svg" alt="banner image logo">
+        <img class="banner-image" src="images/banner-yellow.jpg" alt="large banner image of face mask" role="presentation">
+        <img src="images/sunshine-logo.svg" alt="banner image logo" role="presentation">
         <h2>Images and Inspiration from yellow.beauty.com</h2>
       </section>
     </header>
@@ -46,7 +46,7 @@
         <div class="wrapper">
           <h2>New Products</h2>
           <div class="new-product-section">
-            <img src="images/face-cream.jpg" alt="">
+            <img src="images/face-cream.jpg" alt="image of face cream product">
             <p>Our newest product is our Hydrasun face cream.  It is another step added in our skin care routine as it is to be used after our elixir to lock in moisture for the day and give a beautiful, clean and soft feel to your skin.  It includes some amazing and very beneficial ingredients such as honey, turmeric, sea buckthorn, reishi mushroom and golden root.
               These ingredients are so beneficial for your skin because it includes anti aging properties and collagen boost. Furthermore it helps regulate many skin conditions for example with acne breakouts, eczema and many more, at the same time lessening the appearance of dark spots and acne scars. So what are you waiting for?</p>
           </div>
