Updating Banner Content Sizes

--- a/faq.html
+++ b/faq.html
@@ -77,10 +77,10 @@
               small skincare company in 2017 with the goal of making others feel good about their skin.</p>
             </div>
             <div class="button">
-              <h3>Subscribe</h3>
+              <a href="https://yellowbeauty.com/pages/reviews" aria-label="Subscribe to Sunshine">Subscribe</a>
             </div>
             <div class="button">
-              <h3>Reviews</h3>
+              <a href="https://yellowbeauty.com/pages/reviews" aria-label="Write a review">Reviews</a>
             </div>
           </div>
         </section>
