--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header role="banner">
       <section class="nav">
-        <a href class="logo"="./index.html"><img src="images/sunshine-logo.svg" alt="sunshine logo"></a>
+        <a href class="logo"="./index.html"><img src="images/sunshine-logo.svg" alt="Sunshine logo"></a>
         <nav role="navigation">
           <ul>
             <li><a href="./index.html"aria-label="To Home Page">Home</a></li>
@@ -24,8 +24,8 @@
       </section>
       <section class="banner">
         <h1>Sunshine</h1>
-        <img class="banner-image" src="images/banner-yellow.jpg" alt="large banner image of face mask" role="presentation">
-        <img src="images/sunshine-logo.svg" alt="banner image logo" role="presentation">
+        <!-- <img class="banner-image" src="images/banner-yellow.jpg" alt="large banner image of face mask" role="presentation"> -->
+        <img class="banner-logo" src="images/sunshine-logo.svg" alt="Sunshine logo" role="presentation">
         <h2>Images and Inspiration from yellow.beauty.com</h2>
       </section>
     </header>
@@ -36,7 +36,7 @@
           <h2>About</h2>
           <div class="about-flex">
             <p>Sunshine is a small company which produces products for a fresh face. Founded in 2017 in hopes of helping those improve their skin care routine and achieve their skin goals they never thought possible. Sunshine is here for you, we are here to help you achieve your skin goals and boost your self confidence and serotonin. Find the benefits you need here from ingredients you’ll love.</p>
-            <img src="images/about-set.jpg" alt="self care set image">
+            <img src="images/about-set.jpg" alt="Self care set Image">
           </div>
         </div>
       </section>
@@ -46,7 +46,7 @@
         <div class="wrapper">
           <h2>New Products</h2>
           <div class="new-product-section">
-            <img src="images/face-cream.jpg" alt="image of face cream product">
+            <img src="images/face-cream.jpg" alt="Image of New Face Cream">
             <p>Our newest product is our Hydrasun face cream.  It is another step added in our skin care routine as it is to be used after our elixir to lock in moisture for the day and give a beautiful, clean and soft feel to your skin.  It includes some amazing and very beneficial ingredients such as honey, turmeric, sea buckthorn, reishi mushroom and golden root.
               These ingredients are so beneficial for your skin because it includes anti aging properties and collagen boost. Furthermore it helps regulate many skin conditions for example with acne breakouts, eczema and many more, at the same time lessening the appearance of dark spots and acne scars. So what are you waiting for?</p>
           </div>
