--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="https://use.typekit.net/pnd6spq.css">
     <link rel="stylesheet" href="https://use.typekit.net/pnd6spq.css">
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet"> 
     <link href="css/main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
       rel="stylesheet">
@@ -36,7 +37,9 @@
           <h2>About</h2>
           <div class="about-flex">
             <p>Sunshine is a small company which produces products for a fresh face. Founded in 2017 in hopes of helping those improve their skin care routine and achieve their skin goals they never thought possible. Sunshine is here for you, we are here to help you achieve your skin goals and boost your self confidence and serotonin. Find the benefits you need here from ingredients you’ll love.</p>
-            <img src="images/about-set.jpg" alt="Self care set Image">
+            <div class="about-set-div">
+              <img src="images/about-set.jpg" alt="Self care set Image">
+            </div>
           </div>
         </div>
       </section>
@@ -46,9 +49,13 @@
         <div class="wrapper">
           <h2>New Products</h2>
           <div class="new-product-section">
-            <img src="images/face-cream.jpg" alt="Image of New Face Cream">
-            <p>Our newest product is our Hydrasun face cream.  It is another step added in our skin care routine as it is to be used after our elixir to lock in moisture for the day and give a beautiful, clean and soft feel to your skin.  It includes some amazing and very beneficial ingredients such as honey, turmeric, sea buckthorn, reishi mushroom and golden root.
-              These ingredients are so beneficial for your skin because it includes anti aging properties and collagen boost. Furthermore it helps regulate many skin conditions for example with acne breakouts, eczema and many more, at the same time lessening the appearance of dark spots and acne scars. So what are you waiting for?</p>
+            <div class="new-product-image">
+              <img src="images/face-cream.jpg" alt="Image of New Face Cream">
+            </div>
+            <div class="product-paragraph">
+              <p>Our newest product is our Hydrasun face cream.  It is another step added in our skin care routine as it is to be used after our elixir to lock in moisture for the day and give a beautiful, clean and soft feel to your skin.  It includes some amazing and very beneficial ingredients such as honey, turmeric, sea buckthorn, reishi mushroom and golden root.
+                These ingredients are so beneficial for your skin because it includes anti aging properties and collagen boost. Furthermore it helps regulate many skin conditions for example with acne breakouts, eczema and many more, at the same time lessening the appearance of dark spots and acne scars. So what are you waiting for?</p>
+            </div>
           </div>
         </div>
       </section>
@@ -61,8 +68,8 @@
               therefore it is a great element for controlling acne. It’s anti acne property is very important benefit for so many people struggling with acne and self esteem issues because of it. Furthermore it helps to heal
               your skin from any damages as it has a property which speeds up the skin cells healing process.</p>
             <div class="ingredient-images">
-              <img src="images/bath-honey.jpg" alt="image of bath and face scrub">
-              <img src="images/honey-spoon.jpg" alt="image of honeycomb">
+              <img src="images/bath-honey.jpg" alt="Bath and Face Scrub">
+              <img src="images/honey-spoon.jpg" alt="Image of Honeycomb">
             </div>
           </div>
 
